# kismet-fate-fortune-gemini

./: README.md  pyproject.toml
kismet/: __main__.py  cli.py
kismet_fortune/: __init__.py  __main__.py  cli.py  fortune.py
tests/: test_fortune.py
